# penpal

./: .github-setup.ps1  .gitignore  AGENTS.md  GET_BINARIES.md  GITHUB_BUILD_FIX.md  GITHUB_SETUP.md  README.md  RELEASE_GUIDE.md  SECURITY_AUDIT.md  SECURITY_TEST.md  build-local.bat  download-latest-release.py  generate_icons.py  install-prerequisites.bat  package-lock.json  package.json  run-dev.bat  run-web.bat  setup.bat
.github/workflows/: release.yml  test-build.yml
.ssh/: deploy_key.pub
screenshots/: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
