[package]
name = "penpal-draw"
version = "0.2.1"
description = "A drawing app for XPPen Artist 15.6 Pro V2"
authors = ["cms"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-set-fullscreen", "window-set-position", "window-set-size"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
